<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/blue_A700"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/fruits"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="15dp"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@drawable/search_box"
                    android:text="@string/view_all" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/ll01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        android:weightSum="3">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/apple" />

                        <TextView
                            android:id="@+id/eleo_pro_1_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/product_1_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/product_name_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_rupee_indian"
                            android:text="@string/product_1_price"
                            android:textColor="@color/black"
                            android:textSize="@dimen/product_prize_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        android:weightSum="3">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/ornage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/product_2_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/product_name_size"  />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_rupee_indian"
                            android:text="@string/product_2_price"
                            android:textColor="@color/black"
                            android:textSize="@dimen/product_prize_size" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        android:weightSum="3">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/mango" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/product_3_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/product_name_size"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_rupee_indian"
                            android:text="@string/product_3_price"
                            android:textColor="@color/black"
                            android:textSize="@dimen/product_prize_size"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        android:weightSum="3">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/pomo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/product_4_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/product_name_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_rupee_indian"
                            android:text="@string/product_4_price"
                            android:textColor="@color/black"
                            android:textSize="@dimen/product_prize_size"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>