<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!--                    <LinearLayout-->
            <!--                        android:gravity="end"-->
            <!--                        android:padding="10dp"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="match_parent">-->
            <!--                    <LinearLayout-->
            <!--                        android:id="@+id/btnLogout"-->
            <!--                        android:clickable="true"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="match_parent">-->
            <!--                    <TextView-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="match_parent"-->
            <!--                        android:text="@string/logout"-->
            <!--                        android:textSize="20dp"-->
            <!--                        android:textAlignment="center"-->
            <!--                        android:padding="3dp"-->
            <!--                        android:textStyle="bold"/>-->
            <!--                    <ImageButton-->
            <!--                        android:layout_gravity="right"-->
            <!--                        android:layout_width="35dp"-->
            <!--                        android:layout_height="35dp"-->
            <!--                        android:src="@drawable/ic_outline_exit_to_app_24"/>-->
            <!--                    </LinearLayout>-->
            <!--                </LinearLayout>-->
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_round" />

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:padding="@dimen/layoutMargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical"
                android:padding="@dimen/layoutMargin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_name"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18sp"
                    android:text="@string/email"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18sp"
                    android:text="@string/hint_mobile"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18sp"
                    android:text="@string/hint_location"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <!--                <Button-->
                <!--                    android:id="@+id/btnLogout"-->
                <!--                    android:clickable="true"-->
                <!--                    android:text="@string/logout"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    />-->
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/btnLogout"
        style="@style/RippleStyleWhite"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_600"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </com.balysv.materialripple.MaterialRippleLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>